force-app/main/default/objects/Delivery_Setting__mdt/Delivery_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Delivery rules for website orders, by the delivery PIN code. Edit the Default record in Setup &gt; Custom Metadata Types &gt; Delivery Setting &gt; Manage Records. Per-brand minimums live in Delivery Brand Minimum.</description>
    <label>Delivery Setting</label>
    <pluralLabel>Delivery Settings</pluralLabel>
</CustomObject>