force-app/main/default/objects/Delivery_Setting__mdt/fields/Charge_Per_Kg__c.field-meta.xml
<CustomField>
    <fullName>Charge_Per_Kg__c</fullName>
    <description>Rupees per KG of the whole order, charged only outside the home state. No GST is added to it.</description>
    <inlineHelpText>Rupees per KG of the whole order, charged only outside the home state. No GST is added to it.</inlineHelpText>
    <label>Delivery Charge per KG</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>