force-app/main/default/objects/Delivery_Setting__mdt/fields/Default_Min_Kg__c.field-meta.xml
<CustomField>
    <fullName>Default_Min_Kg__c</fullName>
    <description>Outside the local districts, each brand in the order must reach this many KG unless Delivery Brand Minimum sets its own.</description>
    <inlineHelpText>Outside the local districts, each brand in the order must reach this many KG unless Delivery Brand Minimum sets its own.</inlineHelpText>
    <label>Default Minimum KG per Brand</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>