force-app/main/default/objects/Delivery_Setting__mdt/fields/Home_State__c.field-meta.xml
<CustomField>
    <fullName>Home_State__c</fullName>
    <description>Orders to this state outside the local districts need the minimum weight but pay no delivery charge. Example: KARNATAKA</description>
    <inlineHelpText>Orders to this state outside the local districts need the minimum weight but pay no delivery charge. Example: KARNATAKA</inlineHelpText>
    <label>Home State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>