force-app/main/default/objects/Delivery_Setting__mdt/fields/Local_Districts__c.field-meta.xml
<CustomField>
    <fullName>Local_Districts__c</fullName>
    <description>Districts (India Post names, separated by ;) where any order size is delivered. Example: BENGALURU URBAN;BENGALURU RURAL</description>
    <inlineHelpText>Districts (India Post names, separated by ;) where any order size is delivered. Example: BENGALURU URBAN;BENGALURU RURAL</inlineHelpText>
    <label>Local Delivery Districts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>