force-app/main/default/objects/Delivery_Setting__mdt/fields/Max_Charge__c.field-meta.xml
<CustomField>
    <fullName>Max_Charge__c</fullName>
    <description>Cap in rupees on the delivery charge. Leave blank for no cap.</description>
    <inlineHelpText>Cap in rupees on the delivery charge. Leave blank for no cap.</inlineHelpText>
    <label>Maximum Delivery Charge</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>